--- a/package.json
+++ b/package.json
@@ -25,11 +25,22 @@
 		"onLanguage:apl",
 		"workspaceContains:**/*.dyalog"
 	],
-	"main": "./client/out/extension",
+	"main": "./out/extension",
 	"contributes": {
+		"languages": [{
+            "id": "apl",
+            "aliases": ["apl", "apl"],
+            "extensions": [".dyalog",".dyapp",".aplf",".aplo",".aplc",".apli",".apln",".apla"],
+            "configuration": "./language-configuration.json"
+        }],
+        "grammars": [{
+            "language": "apl",
+            "scopeName": "source.apl",
+            "path": "./syntaxes/apl.tmLanguage.json"
+        }],
 		"configuration": {
 			"type": "object",
-			"title": "Example configuration",
+			"title": "APL configuration",
 			"properties": {
 				"aplLanguageServer.maxNumberOfProblems": {
 					"scope": "resource",
@@ -52,10 +63,9 @@
 		}
 	},
 	"scripts": {
-		"vscode:prepublish": "cd client && npm run update-vscode && cd .. && npm run compile",
+		"vscode:prepublish": "npm run update-vscode && npm run compile",
 		"compile": "tsc -p .",
 		"watch": "tsc -w -p .",
-		"postinstall": "cd client && npm install && cd ../server && npm install && cd ..",
 		"test": "sh ./scripts/e2e.sh"
 	},
 	"devDependencies": {
