--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "vscode-apl-language-client",
 	"displayName": "APL Language Server Client",
 	"description": "APL Language Server client for VS Code",
-	"version": "0.0.8",
+	"version": "0.0.9",
 	"publisher": "OptimaSystems",
 	"author": {
 		"email": "gil@optima-systems.co.uk",
@@ -16,7 +16,7 @@
 		"url": "https://github.com/optimasystems/vscode-apl-language-client.git"
 	},
 	"engines": {
-		"vscode": "^1.26.0"
+		"vscode": "^1.33.1"
 	},
 	"categories": [
 		"Programming Languages"
@@ -49,7 +49,7 @@
 						"null"
 					],
 					"default": null,
-					"description": "The path to a Dyalog executable."
+					"description": "The full path to a Dyalog executable (including the name of the binary)."
 				},
 				"apl.server.wsPath": {
 					"type": [
@@ -57,12 +57,12 @@
 						"null"
 					],
 					"default": null,
-					"description": "The path to a Language server workspace."
+					"description": "The full path to a Language server workspace."
 				},
 				"apl.server.prefixCompleteCharacters": {
 					"type": "string",
 					"default": "`",
-					"description": "Prefix character used for entering APL primitives."
+					"description": "Prefix character(s) used for entering APL primitives."
 				}
 			}
 		}
@@ -76,12 +76,12 @@
 		"test": "sh ./scripts/e2e.sh"
 	},
 	"devDependencies": {
-		"vscode": "^1.1.22",
-		"@types/mocha": "^5.2.5",
-		"@types/node": "^8.10.38",
-		"typescript": "2.8.3"
+		"@types/mocha": "^5.2.6",
+		"@types/node": "^8.10.48",
+		"typescript": "^3.4.5",
+		"vscode": "^1.1.33"
 	},
 	"dependencies": {
-		"vscode-languageclient": "^5.1.1"
+		"vscode-languageclient": "^5.2.1"
 	}
 }
